<resources>
    <string name="app_name">FOOD ACEDEMY</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="logo">logo</string>
    <string name="no_time_ordet_healthy">No Time, Order Healthy</string>
    <string name="let_s_cook_together">Let\'s Cook Together</string>
    <string name="no_time_order_healthy" />
    <string name="ck">CK</string>
    <string name="RST" />
    <string name="CK">CK\n</string>
    <string name="rst">RST</string>
    <string name="salad">salad</string>
    <string name="meet" />
    <string name="chicken">chicken\n</string>

    <string name="b1_in"> \n
        •	Lean ground beef \n
        •	Corn or whole wheat tortillas \n
        •	Black beans, drained and rinsed \n
        •	Cherry tomatoes, halved \n
        •	Avocado, diced \n
        •	Red onion, diced \n
        •	Cilantro, chopped \n
        •	Lime wedges \n
        •	Taco seasoning (cumin, chili powder, garlic powder, onion powder, salt)\n
    </string>
    <string name="b1_stp"> \n
        1.	In a skillet over medium heat, cook lean ground beef until browned. Drain excess fat.\n
        2.	Add taco seasoning to the skillet and stir to combine. \n
        3.	Warm corn or whole wheat tortillas in a dry skillet or microwave. \n
        4.	Assemble tacos by filling tortillas with seasoned beef, black beans, cherry tomatoes, diced avocado, red onion, and chopped cilantro.\n
        5.	Squeeze fresh lime juice over the tacos before serving.\n

    </string>

    <string name="b2_in"> \n
        •	Lean ground beef\n
        •	Broccoli florets\n
        •	Cooked quinoa \n
        •	Garlic, minced\n
        •	Low-sodium soy sauce\n
        •	Sesame oil\n
        •	Red pepper flakes (optional)\n
        •	Green onions, sliced\n
    </string>
    <string name="b2_stp"> \n
        1.	In a skillet over medium heat, cook lean ground beef until browned.\n
        2.	Add minced garlic and cook for another minute.\n
        3.	Stir in broccoli florets and cook until they are tender.\n
        4.	Add cooked quinoa to the skillet and stir to combine.\n
        5.	Drizzle with low-sodium soy sauce and sesame oil, adjusting to taste. Add red pepper flakes for some heat if desired.\n
        6.	Serve hot, garnished with sliced green onions.\n

    </string>

    <string name="b3_in"> \n
        •	Lean beef strips (such as sirloin or flank steak)\n
        •	Assorted vegetables (bell peppers, broccoli, snap peas, carrots)\n
        •	Garlic, minced\n
        •	Ginger, minced\n
        •	Low-sodium soy sauce \n
        •	Olive oil\n
        •	Sesame oil\n
        •	Brown rice or quinoa (optional, for serving)\n
    </string>
    <string name="b3_stp"> \n
        1.	Heat olive oil in a large skillet or wok over medium-high heat.\n
        2.	Add minced garlic and ginger, sauté for 1 minute.\n
        3.	Add beef strips to the skillet and cook until browned.\n
        4.	Add mixed vegetables to the skillet and stir-fry until they are tender-crisp.\n
        5.	Stir in low-sodium soy sauce and a dash of sesame oil, adjusting to taste.\n
        6.	Serve hot over brown rice or quinoa if desired.\n

    </string>

    <string name="s1_in"> \n
      •	1 can chickpeas, drained and rinsed\n
        •	1 avocado, diced\n
        •	1 cup cherry tomatoes, halved\n
        •	1/4 cup red onion, finely chopped\n
        •	1/4 cup cilantro, chopped\n
        •	Juice of 1 lime\n
        •	2 tablespoons olive oil\n
        •	Salt and pepper to taste\n
    </string>
    <string name="s1_stp"> \n
       1.	In a large bowl, combine the chickpeas, avocado, cherry tomatoes, red onion, and cilantro.\n
        2.	In a small bowl, whisk together the lime juice, olive oil, salt, and pepper.\n
        3.	Pour the dressing over the salad and gently toss to combine.\n
        4.	Serve immediately for the best texture and flavor.\n
    </string>

    <string name="s2_in"> \n
        •	1 cup quinoa, cooked and cooled\n
        •	2 cups chopped kale\n
        •	1 cup cherry tomatoes, halved\n
        •	1 cucumber, diced\n
        •	1/4 cup red onion, finely chopped\n
        •	1/4 cup feta cheese, crumbled (optional) \n
        •	1/4 cup toasted almonds or walnuts\n
        •	Juice of 1 lemon\n
        •	2 tablespoons olive oil\n
        •	Salt and pepper to taste\n
    </string>
    <string name="s2_stp"> \n
        1.	In a large bowl, combine the cooked quinoa, kale, cherry tomatoes, cucumber, and red onion.\n
        2.	In a small bowl, whisk together the lemon juice, olive oil, salt, and pepper.\n
        3.	Pour the dressing over the salad and toss to combine.\n
        4.	Top with feta cheese and toasted nuts.\n
        5.	Serve immediately or chill in the refrigerator before serving.\n
    </string>

    <string name="s3_in"> \n
        •	6 cups fresh baby spinach\n
        •	1 cup sliced strawberries\n
        •	1/4 cup sliced almonds\n
        •	1/4 cup crumbled feta cheese\n
        •	1/4 red onion, thinly sliced\n
        •	2 tablespoons balsamic vinegar\n
        •	1 tablespoon honey\n
        •	1 teaspoon Dijon mustard\n
        •	1/4 cup olive oil\n
        •	Salt and pepper to taste\n
    </string>
    <string name="s3_stp"> \n
        1.	In a large bowl, combine the spinach, strawberries, almonds, feta cheese, and red onion.\n
        2.	In a small bowl, whisk together the balsamic vinegar, honey, and Dijon mustard. Slowly drizzle in the olive oil while continuing to whisk until the dressing is well combined. Season with salt and pepper.\n
        3.	Pour the dressing over the salad and toss gently to combine. Serve immediately.\n
\n
    </string>

    <string name="c1_in"> \n
        •	Chicken breasts, cut into cubes\n
        •	Bell peppers (red, yellow, green), cut into chunks\n
        •	Red onion, cut into chunks\n
        •	Zucchini, sliced\n
        •	Cherry tomatoes \n
        •	Olive oil\n
        •	Lemon juice\n
        •	Garlic, minced\n
        •	Salt and pepper\n
        •	Fresh herbs (thyme, rosemary, or oregano)\n
    </string>
    <string name="c1_stp"> \n
        1.	In a bowl, combine olive oil, lemon juice, minced garlic, salt, pepper, and fresh herbs.\n
        2.	Add the chicken cubes to the marinade and let sit for at least 30 minutes.\n
        3.	Thread the chicken, bell peppers, onion, zucchini, and cherry tomatoes onto skewers.\n
        4.	Grill the skewers over medium-high heat, turning occasionally, until the chicken is cooked through and the vegetables are tender.\n
        5.	Serve with a side of quinoa or a fresh salad.\n

    </string>

    <string name="c2_in"> \n
        •	Bell peppers, halved and seeds removed\n
        •	Cooked quinoa\n
        •	Cooked chicken breast, shredded\n
        •	Black beans, rinsed and drained\n
        •	Corn kernels\n
        •	Diced tomatoes\n
        •	Chopped cilantro\n
        •	Cumin, chili powder, salt, and pepper\n
        •	Shredded cheese (optional)\n
        •	Lime wedges (for serving)\n
    </string>
    <string name="c2_stp"> \n
        1.	Preheat the oven to 375°F (190°C).\n
        2.	In a large bowl, mix the cooked quinoa, shredded chicken, black beans, corn, diced tomatoes, cilantro, and spices.\n
        3.	Stuff each bell pepper half with the quinoa and chicken mixture.\n
        4.	Place the stuffed bell peppers in a baking dish and cover with foil.\n
        5.	Bake for 30-35 minutes until the peppers are tender.\n
        6.	If using, sprinkle shredded cheese on top and bake uncovered for an additional 5 minutes until the cheese is melted.\n
        7.	Serve with lime wedges.\n

    </string>

    <string name="c3_in"> \n
        •	Chicken breasts or thighs\n
        •	Olive oil\n
        •	Lemon juice\n
        •	Garlic, minced\n
        •	Fresh herbs (thyme, rosemary, parsley), chopped\n
        •	Salt and pepper\n
    </string>
    <string name="c3_stp"> \n
        1.	In a bowl, mix olive oil, lemon juice, garlic, and chopped herbs.\n
        2.	Season the chicken with salt and pepper.\n
        3.	Marinate the chicken in the mixture for at least 30 minutes.\n
        4.	Grill the chicken over medium-high heat until fully cooked, about 6-8 minutes per side.\n
        5.	Serve with a side of steamed vegetables or a fresh salad.\n
    </string>


</resources>